@@ -36,7 +36,7 @@ and
 ## Requirements
 
 Scripts depend on various programs and modules to run. Refer to the paper for which versions were used.
-*Make sure all of these programs are in your [`$PATH`](http://www.linfo.org/path_env_var.html)*
+*Make sure all of these programs are in your [`$PATH`](http://www.linfo.org/path_env_var.html)*<br/>
 
 ###### Perl
 - Perl 5: https://www.perl.org/
@@ -121,7 +121,7 @@ For all one-to-one orthologs, get the coding DNA (cds) and the corresponding pro
 ###### 2a. Get sequences
 1. Run `start_parallel_sequence_fetching.pl`, which reads the ortholog cluster information, divides the genes in batches of 1000 (`$batchsize` can be changed in the script) and prints the instructions for the next step:
 2. `get_sequences_for_one2one_orthologs_from_gene_tree_pipeline.pl`. This step fetches the sequences. E.g.
-```
+```bash
 STARTING PARALLEL INSTANCE 11
 from 10001 to 11000
 1000 genes
@@ -139,14 +139,14 @@ Produce codon-based nucleotide sequence alignments for all the one-to-one orthol
 
 ###### 3a. PRANK codon-based multiple alignment
 This step collects all fasta files containing cDNA sequences for the species of interest, and for each of them runs the `PRANK` in codon mode (`-codon`) to align them. Jobs are executed and monitored in parallel using `GNU Parallel` (set number of cores with `--max-procs`).
-```
+```bash
 find sequences/ -type f -name "*__cds.fa" | parallel --max-procs 4 --joblog parallel_prank-codon.log --eta 'prank +F -codon -d={} -o={.}.prank-codon.aln.fa -quiet > /dev/null'
 ```
 This effectively execute the following commands:
-```
+```bash
 find sequences/ -type f -name "*__cds.fa" | parallel 'echo prank +F -codon -d={} -o={.}.prank-codon.aln.fa -quiet'
 ```
-```
+```bash
 ...
 prank +F -codon -d=sequences//cds/ENSG00000274211__cds.fa -o=sequences//cds/ENSG00000274211__cds.prank-codon.aln.fa -quiet
 prank +F -codon -d=sequences//cds/ENSG00000274523__cds.fa -o=sequences//cds/ENSG00000274523__cds.prank-codon.aln.fa -quiet
@@ -157,7 +157,7 @@ prank +F -codon -d=sequences//cds/ENSG00000019549__cds.fa -o=sequences//cds/ENSG
 ###### 3b. GUIDANCE - assessment and masking
 1. Run GUIDANCE to assess the sensitivity of the alignment to perturbations of the guide tree.<br/>
 *Note that this requires a bug fix in GUIDANCE (version 1.5 - 2014, August 7), see [GUIDANCE_source_code_fix_for_running_PRANK](Supplementary_data_and_material/GUIDANCE_source_code_fix_for_running_PRANK/)*
-```
+```bash
 find sequences/ -type f -name "*__cds.fa" | parallel --max-procs 4 --nice 10 --joblog parallel_guidance-prank-codon.log --eta 'mkdir -p sequences/guidance-prank-codon/{/.}; guidance.pl --program GUIDANCE --seqFile {} --seqType nuc --msaProgram PRANK --MSA_Param "\+F \-codon" --outDir sequences/guidance-prank-codon/{/.} &> sequences/guidance-prank-codon/{/.}/parallel_guidance-prank-codon.output'
 ```
 
@@ -167,13 +167,15 @@ find sequences/ -type f -name "*__cds.fa" | parallel --max-procs 4 --nice 10 --j
 Run T-Coffee TCS to assess alignment stability by independently re-aligning all possible pairs of sequences. Note that we ran TCS on translated PRANK codon alignments.<br/>
 
 1. Translate the PRANK alignments to protein. Note that we use the PRANK alignments generated through GUIDANCE (Step 3b) to ensure we are masking the same alignments with both GUIDANCE and TCS!
-```
+```bash
 mkdir -p sequences/tcs-prank-codon
 find sequences/prank-codon-masked/ -type f -name "*__cds.prank-codon.aln.fa" | parallel --max-procs 4 --nice 10 --joblog parallel_translate-prank-codon-alignments.log --eta 't_coffee -other_pg seq_reformat -in {} -action +translate -output fasta_aln > sequences/tcs-prank-codon/{/.}.translated.fa'
+cd ../../
 ```
 
 2. Run TCS on the translated PRANK alignments:
-```
+```bash
+cd sequences/tcs-prank-codon
 find . -type f -name "*prank-codon.aln.translated.fa" | parallel --max-procs 4 --nice 10 --joblog ../../parallel_tcs-t-coffee.log --eta 't_coffee -infile {} -evaluate -method proba_pair -output score_ascii, score_html -quiet  > /dev/null'
 ```
 
@@ -236,9 +238,14 @@ find sequences/guidance-prank-codon/ -type f | grep PRANK.std$ | xargs cat | gre
 
 *****
 View alignments and annotations
+```bash
+Java	-Djava.ext.dirs=/Applications/Jalview/lib/
+	-cp /Applications/Jalview/jalview.jar jalview.b.Jalview
+	-open <ENSEMBL_ID>__cds.prank-codon-guidance-tcs-masked-species-sorted.aln.translated.fa
+```
 *****
 Jalview annotation files contain annotations for the positively selected residues (PSR), as well as exon coordinates mapped to protein sequences. They can be loaded together with the correct corresponding alignment using (on Mac):
-```
+```bash
 Java	-Djava.ext.dirs=/Applications/Jalview/lib/
 	-cp /Applications/Jalview/jalview.jar jalview.b.Jalview
 	-open <ENSEMBL_ID>__cds.prank-codon-guidance-tcs-masked-species-sorted.aln.translated.fa
